Commented on Demo_Database_FileSystem

--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -33,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Connecting to a FileSystem database passing in a path to a directory to be used as the database\n",
     "db = Database('../test_exp')\n",
     "destroy_everything_in(db)"
    ]
@@ -43,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating a FileNavigator object passing in regex patterns\n",
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')"
    ]
@@ -53,15 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MockEpochProbeMap: pass\n",
-    "ds = DaqSystem(name='myDaq1',\n",
-    "              file_navigator=fn,\n",
-    "              daq_reader=MockReader,\n",
-    "              epoch_probe_map=MockEpochProbeMap)\n",
-    "ds2 = DaqSystem(name='myDaq2',\n",
-    "               file_navigator=fn,\n",
-    "               daq_reader=MockReader,\n",
-    "              epoch_probe_map=MockEpochProbeMap)"
+    "# Mock EpochProbeMap class used just for this demo\n",
+    "class MockEpochProbeMap: pass"
    ]
   },
   {
@@ -70,6 +65,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating DaqSystem objects\n",
+    "ds = DaqSystem(name='myDaq1',\n",
+    "               file_navigator=fn,\n",
+    "               daq_reader=MockReader,\n",
+    "               epoch_probe_map=MockEpochProbeMap)\n",
+    "ds2 = DaqSystem(name='myDaq2',\n",
+    "                file_navigator=fn,\n",
+    "                daq_reader=MockReader,\n",
+    "                epoch_probe_map=MockEpochProbeMap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiating Experiment objects and connecting it to its context (Database and DaqSystems)\n",
     "e = Experiment(name='myExperiment3').connect(\n",
     "    database=db,\n",
     "    daq_systems=[ds, ds2]\n",
@@ -78,40 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Experiment.connect() has not been run on this experiment (7dc3c8db1946437cb2344347b88f4b93). It will be minimally functional until connected.\n"
+      "Warning: Experiment.connect() has not been run on this experiment (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
      ]
     }
    ],
    "source": [
+    "# Testing that experiment (created above) was added to the database upon connection by finding it based on its id\n",
     "e2doc = db.find_by_id(e.id)\n",
+    "\n",
+    "# Recreating the Experiment object from the found experiment document\n",
     "e2 = Experiment.from_document(e2doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e2 == e"
    ]
   },
   {
@@ -119,13 +115,6 @@
    "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Experiment.connect() has not been run on this experiment (7dc3c8db1946437cb2344347b88f4b93). It will be minimally functional until connected.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -138,9 +127,8 @@
     }
    ],
    "source": [
-    "e2 == Experiment.from_document(\n",
-    "    db.find(Q('_metadata.name') == 'myExperiment3')[0]\n",
-    ")"
+    "# Verifying the Experiments are the same\n",
+    "e2 == e"
    ]
   },
   {
@@ -149,9 +137,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Experiment.connect() has not been run on this experiment (181219cf1ed84cb9a4d4b8bdd5adabd3). It will be minimally functional until connected.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[]"
+       "True"
       ]
      },
      "execution_count": 10,
@@ -160,35 +155,42 @@
     }
    ],
    "source": [
-    "db.find(Q('_metadata.name') == 'myExperiment2')"
+    "# Using the find method by passing in a query to get the original experiment and verifying that its the same\n",
+    "e2 == Experiment.from_document(\n",
+    "    db.find(Q('_metadata.name') == 'myExperiment3')[0]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "is_daq_system = Q('_metadata.type') == DaqSystem.DOCUMENT_TYPE\n",
-    "# has_experiment_id = Q('_metadata.experiment_id') == e.id\n",
-    "ds_results = db.find(is_daq_system)"
+    "# Finding a nonmatch to show an empty list is returned\n",
+    "db.find(Q('_metadata.name') == 'myExperiment2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<ndi.document.Document object at 0x1115ffeb0>, <ndi.document.Document object at 0x12a4acb50>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(ds_results)"
+    "# Showing find method again with a query for DaqSystems\n",
+    "is_daq_system = Q('_metadata.type') == DaqSystem.DOCUMENT_TYPE\n",
+    "ds_results = db.find(is_daq_system)"
    ]
   },
   {
@@ -200,23 +202,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'myDaq1', 'type': 'ndi_daq_system', 'experiment_id': '7dc3c8db1946437cb2344347b88f4b93', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
+      "[<ndi.document.Document object at 0x131372100>, <ndi.document.Document object at 0x131372310>]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(ds_results[0].data)\n",
-    "e.ctx.daq_systems[0] == DaqSystem.from_document(ds_results[0])"
+    "print(ds_results)"
    ]
   },
   {
@@ -225,12 +216,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'name': 'myDaq2', 'type': 'ndi_daq_system', 'experiment_id': '181219cf1ed84cb9a4d4b8bdd5adabd3', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x12a4ac400>,\n",
-       " <ndi.document.Document at 0x12a4bc160>,\n",
-       " <ndi.document.Document at 0x12a4bc220>,\n",
-       " <ndi.document.Document at 0x12a4bc340>]"
+       "False"
       ]
      },
      "execution_count": 14,
@@ -239,16 +234,34 @@
     }
    ],
    "source": [
-    "db.find()"
+    "print(ds_results[0].data)\n",
+    "\n",
+    "# Verifying the DaqSystem found in the database matches this experiment's DaqSystem\n",
+    "e.ctx.daq_systems[0] == DaqSystem.from_document(ds_results[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x131357130>,\n",
+       " <ndi.document.Document at 0x1313574c0>,\n",
+       " <ndi.document.Document at 0x131372d30>,\n",
+       " <ndi.document.Document at 0x1313728e0>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "db.delete_by_id(e.id, force=True)"
+    "# Passing nothing into find method to show that it returns all documents in the database\n",
+    "db.find()"
    ]
   },
   {
@@ -257,24 +270,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    db.find_by_id(e.id)\n",
-    "except FileNotFoundError:\n",
-    "    print('File not found')"
+    "# Deleting the created experiment by id\n",
+    "db.delete_by_id(e.id, force=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "db.delete_many(force=True)"
+    "# Checking to make sure that the file is gone\n",
+    "result = db.find_by_id(e.id)\n",
+    "print(result is None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deleting all items in the database because no query object was passed in\n",
+    "db.delete_many(force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -283,25 +314,14 @@
        "[]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Verifying that find method now returns empty array, meaning all items have been deleted\n",
     "db.find()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    db.add(ds.document)\n",
-    "except FileExistsError as e:\n",
-    "    print(e)"
    ]
   },
   {
@@ -310,7 +330,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.upsert(ds.document, force=True)"
+    "# Adding a DaqSystem's document to the database\n",
+    "db.add(ds.document)"
    ]
   },
   {
@@ -319,33 +340,71 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "myDaq1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x13137d130>]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(ds.metadata['name'])"
+    "# Adding a DaqSystem's document to the database showing that an already existing document can be upserted\n",
+    "db.upsert(ds.document, force=True)\n",
+    "db.find()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: daq2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x131357ca0>]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "db.update_by_id(ds.id, { 'name': 'daq2' })"
+    "# Updating a document by id using update_by_id method, passing in a document's id and a dict containing property changes\n",
+    "db.update_by_id(ds.id, { 'name': 'daq2' }, force=True)\n",
+    "db.find()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x1313575b0>]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ds2 = db.find_by_id(ds.id)"
+    "# Searching for the DaqSystem in the database\n",
+    "ds2 = db.find_by_id(ds.id)\n",
+    "db.find()"
    ]
   },
   {
@@ -357,12 +416,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "myDaq1\n"
+      "True\n"
      ]
     }
    ],
    "source": [
-    "print(ds2.metadata['name'])"
+    "# Showing that the names match\n",
+    "print(ds.metadata['name'] == ds2.metadata['name'])"
    ]
   },
   {
@@ -379,6 +439,7 @@
     }
    ],
    "source": [
+    "# Testing that wrong data type will result in error being raised\n",
     "try:\n",
     "    db.add('a')\n",
     "except TypeError as e:\n",
