Updated demo database sql

--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -54,6 +54,7 @@
     }
    ],
    "source": [
+    "# Printing all tables in database\n",
     "for table, value in db.get_tables().items():\n",
     "    print(table if isinstance(table, str) else table.__name__)\n",
     "    print(value)\n"
@@ -65,6 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating FileNavigator object\n",
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')"
    ]
@@ -75,6 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating DaqSystem objects using a mock EpochProbeMap class\n",
     "class MockEpochProbeMap: pass\n",
     "ds = DaqSystem(name='myDaq1',\n",
     "              file_navigator=fn,\n",
@@ -92,6 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Instantiate Experiment object and connect to its context\n",
     "e = Experiment(name='myExperiment3').connect(\n",
     "    database=db,\n",
     "    daq_systems=[ds, ds2]\n",
@@ -107,14 +111,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 myExperiment3 ndi_experiment\n",
-      "1 myDaq1 ndi_daq_system\n",
-      "2 none ndi_file_navigator\n",
-      "3 myDaq2 ndi_daq_system\n"
+      "0 myDaq2 ndi_daq_system\n",
+      "1 myExperiment3 ndi_experiment\n",
+      "2 myDaq1 ndi_daq_system\n",
+      "3 none ndi_file_navigator\n"
      ]
     }
    ],
    "source": [
+    "# Looking through all documents in the database\n",
     "for i, document in enumerate(db.find()):\n",
     "    print(i, document.metadata['name'] or 'none', document.metadata['type'])"
    ]
@@ -128,11 +133,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.document.Document object at 0x128e99f70>\n"
+      "<ndi.document.Document object at 0x11e7972b0>\n"
      ]
     }
    ],
    "source": [
+    "# Find experiment's document in the database\n",
     "print(db.find_by_id(e.id))"
    ]
   },
@@ -147,17 +153,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': '4e30f283ee1945daac2f1cd1672a1dd3', 'ctx': <ndi.context.Context object at 0x128f22f10>, 'binary': <ndi.document.BinaryWrapper object at 0x128f22e80>, 'data': {'_metadata': {'name': 'myExperiment3', 'type': 'ndi_experiment', 'experiment_id': '4e30f283ee1945daac2f1cd1672a1dd3', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': []}}\n"
+      "{'id': '92447c73cdb344aab1b776eabb985bb5', 'ctx': <ndi.context.Context object at 0x12f922a30>, 'binary': <ndi.document.BinaryWrapper object at 0x12f9efd90>, 'data': {'_metadata': {'name': 'myExperiment3', 'type': 'ndi_experiment', 'experiment_id': '92447c73cdb344aab1b776eabb985bb5', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': []}}\n"
      ]
     }
    ],
    "source": [
+    "# Creating ndi Query to search database on\n",
     "ndi_query = (\n",
     "    Q('_metadata.type') == Experiment.DOCUMENT_TYPE)\\\n",
     "    & ( (Q('_metadata.name') != 'something ridiculous')\\\n",
     "      | (Q('_metadata.name').in_(['myExperiment3', '3', 'other']))\\\n",
     "      | (Q('_metadata.name').contains('Experiment33')) )\n",
     "\n",
+    "# Print all documents found using above Query\n",
     "for obj in db.find(ndi_query=ndi_query):\n",
     "    print(obj.__dict__)"
    ]
@@ -176,9 +184,11 @@
     }
    ],
    "source": [
+    "# Updating an experiment's name in the database\n",
     "e.metadata['name'] = 'new_name'\n",
     "db.update(e.document, force=True)\n",
     "\n",
+    "# Checking to make sure its the new name\n",
     "e_doc = db.find_by_id(e.id)\n",
     "print(i, e_doc.metadata['name'])"
    ]
@@ -187,29 +197,21 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.delete(e.document, force=True)\n",
-    "\n",
-    "db.find_by_id(e.id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'sqlalchemy.orm.session.Session'>\n"
+      "None\n"
      ]
     }
    ],
    "source": [
-    "with db._sqla_open_session() as session:\n",
-    "    print(type(session))"
+    "# Deleting experiment from the database\n",
+    "db.delete(e.document, force=True)\n",
+    "\n",
+    "# Checking database if experiment is there\n",
+    "print(db.find_by_id(e.id))"
    ]
   },
   {
