notated demodocument dependencies fs

--- a/example/Demo_Document_Dependencies_FS.ipynb
+++ b/example/Demo_Document_Dependencies_FS.ipynb
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "# Returing dict of dependies for a dcoument and converts dependency ids to document objects\n",
+    "# Returing dict of dependencies for a dcoument and converts dependency ids to document objects\n",
     "result.get_dependencies()"
    ]
   },
