notated Demo_FS_Document_Versions

--- a/example/Demo_FS_Document_Versions.ipynb
+++ b/example/Demo_FS_Document_Versions.ipynb
@@ -30,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Connecting to database\n",
     "db = Database('../test_exp')"
    ]
   },
@@ -41,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "'0458ca14924740ca9bcc9c64138a1ec0'"
+       "'5f136b6dae274c828d8f14e4d6048dd1'"
       ]
      },
      "execution_count": 4,
@@ -50,6 +51,7 @@
     }
    ],
    "source": [
+    "# Creating dummy document\n",
     "doc = Document({ 'subject': 'mouse' })\n",
     "doc.id"
    ]
@@ -86,6 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adding document to database\n",
     "db.add(doc)"
    ]
   },
@@ -103,6 +106,7 @@
     }
    ],
    "source": [
+    "# Search document in database\n",
     "result = db.find_by_id(doc.id)\n",
     "print(result.data)"
    ]
@@ -122,6 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save changed made to the document\n",
     "doc.save_updates()"
    ]
   },
@@ -134,11 +139,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': '', 'type': '', 'experiment_id': '', 'parent_id': '0458ca14924740ca9bcc9c64138a1ec0', 'asc_path': ',0458ca14924740ca9bcc9c64138a1ec0', 'version_depth': 1, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'subject': 'elephant'}\n"
+      "{'_metadata': {'name': '', 'type': '', 'experiment_id': '', 'parent_id': '5f136b6dae274c828d8f14e4d6048dd1', 'asc_path': ',5f136b6dae274c828d8f14e4d6048dd1', 'version_depth': 1, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'subject': 'elephant'}\n"
      ]
     }
    ],
    "source": [
+    "# Search for document again to see that parent_id, version_depth, asc_path, and latest_version properties have been updated\n",
     "result = db.find_by_id(doc.id)\n",
     "print(result.data)"
    ]
@@ -164,8 +170,8 @@
        "{'_metadata': {'name': '',\n",
        "  'type': '',\n",
        "  'experiment_id': '',\n",
-       "  'parent_id': '82a852b20b634324a58e1a815211cc18',\n",
-       "  'asc_path': ',82a852b20b634324a58e1a815211cc18,0458ca14924740ca9bcc9c64138a1ec0',\n",
+       "  'parent_id': 'abe407c063f543a9aab609779c33bfa0',\n",
+       "  'asc_path': ',abe407c063f543a9aab609779c33bfa0,5f136b6dae274c828d8f14e4d6048dd1',\n",
        "  'version_depth': 2,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
@@ -203,8 +209,8 @@
        " {'_metadata': {'name': '',\n",
        "   'type': '',\n",
        "   'experiment_id': '',\n",
-       "   'parent_id': '0458ca14924740ca9bcc9c64138a1ec0',\n",
-       "   'asc_path': ',0458ca14924740ca9bcc9c64138a1ec0',\n",
+       "   'parent_id': '5f136b6dae274c828d8f14e4d6048dd1',\n",
+       "   'asc_path': ',5f136b6dae274c828d8f14e4d6048dd1',\n",
        "   'version_depth': 1,\n",
        "   'latest_version': False},\n",
        "  '_dependencies': {},\n",
@@ -218,6 +224,7 @@
     }
    ],
    "source": [
+    "# Getting and showing a list of a document's document history\n",
     "history = doc.get_history()\n",
     "[d.data for d in history]"
    ]
