Notated Demo_API_Core

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -38,7 +38,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ndi.daqreaders import MockReader"
+    "# Connecting to SQL database, passing in connection string\n",
+    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
+    "#db = ndi.database.FileSystem('./test_db')\n",
+    "destroy_everything_in(db)"
    ]
   },
   {
@@ -47,9 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
-    "#db = ndi.database.FileSystem('./test_db')\n",
-    "destroy_everything_in(db)"
+    "# Creating/connecting to binary collection, passing in path and collection name\n",
+    "bc = BinaryCollection('../test_db', name='document')"
    ]
   },
   {
@@ -58,18 +60,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bc = BinaryCollection('../test_db', name='document')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Creating FileNavigator object, passing in regex patterns\n",
     "fn = FileNavigator(epoch_file_patterns=['.*\\.smr$', '.*\\.epochmetadata$'], \n",
     "                   metadata_file_pattern='.*\\.epochmetadata$')\n",
     "\n",
+    "# Creating a DaqSystem object\n",
     "ds = DaqSystem(\n",
     "    'mySpike2',\n",
     "    file_navigator=fn,\n",
@@ -80,10 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating an Experiment object and connecting it to its context\n",
     "exp = Experiment('demo_api_core').connect(\n",
     "    directory='../tests/data/intracell_example',\n",
     "    database=db,\n",
@@ -95,19 +91,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([<ndi.core.Epoch at 0x12f0359d0>,\n",
+       "  <ndi.core.Epoch at 0x12f0ea850>,\n",
+       "  <ndi.core.Epoch at 0x12f0ea250>],\n",
+       " [<ndi.core.Probe at 0x12f0ea490>, <ndi.core.Probe at 0x12f0ea460>],\n",
+       " [<ndi.core.Channel at 0x12f0ea550>,\n",
+       "  <ndi.core.Channel at 0x12f0c5910>,\n",
+       "  <ndi.core.Channel at 0x12f0c5100>])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Provisioning the DaqSystem with the experiment, this adds Epoch, Probe, and Channel objects to the database\n",
+    "ds.provision(exp)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([<ndi.core.Epoch at 0x127eebbb0>,\n",
-       "  <ndi.core.Epoch at 0x127fb1070>,\n",
-       "  <ndi.core.Epoch at 0x127f0df10>],\n",
-       " [<ndi.core.Probe at 0x10ec66fd0>, <ndi.core.Probe at 0x127ff7df0>],\n",
-       " [<ndi.core.Channel at 0x127ff7ee0>,\n",
-       "  <ndi.core.Channel at 0x127fd2850>,\n",
-       "  <ndi.core.Channel at 0x127fd2d60>])"
+       "[<ndi.core.Epoch at 0x12f0bb760>,\n",
+       " <ndi.core.Epoch at 0x10d3e4730>,\n",
+       " <ndi.core.Epoch at 0x10d3e4460>]"
       ]
      },
      "execution_count": 8,
@@ -116,7 +135,8 @@
     }
    ],
    "source": [
-    "ds.provision(exp)"
+    "# Retrieving epochs for this experiment from the database\n",
+    "exp.get_epochs()"
    ]
   },
   {
@@ -125,20 +145,21 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[<ndi.core.Epoch at 0x10ec66220>,\n",
-       " <ndi.core.Epoch at 0x10ec66370>,\n",
-       " <ndi.core.Epoch at 0x127fd2be0>]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'c3afdc7fde204264858102ef73b8c44e', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': '52be1c0b3ff54cf59ffa7b4724449152', 'type': 'sharp-Vm'}\n",
+      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'c3afdc7fde204264858102ef73b8c44e', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': '52be1c0b3ff54cf59ffa7b4724449152', 'type': 'sharp-Vm'}\n"
+     ]
     }
    ],
    "source": [
-    "exp.get_epochs()"
+    "# Retrieving probes for this experiment from the database\n",
+    "ps = exp.get_probes()\n",
+    "\n",
+    "# Printing each probe's document data\n",
+    "for p in ps:\n",
+    "    print(p.document.data)"
    ]
   },
   {
@@ -147,18 +168,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'd3a73558fc9e4b92a2bd5e67ea697aa5', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 1, 'daq_system_id': 'a1f75bc5ba194df0aa90f62123444479', 'type': 'sharp-Vm'}\n",
-      "{'_metadata': {'name': 'intra', 'type': 'ndi_probe', 'experiment_id': 'd3a73558fc9e4b92a2bd5e67ea697aa5', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'reference': 2, 'daq_system_id': 'a1f75bc5ba194df0aa90f62123444479', 'type': 'sharp-Vm'}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[<ndi.core.Channel at 0x10d4207f0>,\n",
+       " <ndi.core.Channel at 0x10d420850>,\n",
+       " <ndi.core.Channel at 0x10d420dc0>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ps = exp.get_probes()\n",
-    "for p in ps:\n",
-    "    print(p.document.data)"
+    "# Retrieving channels for this experiment from the database\n",
+    "exp.get_channels()"
    ]
   },
   {
@@ -169,9 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x128004af0>,\n",
-       " <ndi.core.Channel at 0x127fb1a90>,\n",
-       " <ndi.core.Channel at 0x127fb1b80>]"
+       "[<ndi.core.Probe at 0x12f0f78b0>]"
       ]
      },
      "execution_count": 11,
@@ -180,26 +202,7 @@
     }
    ],
    "source": [
-    "exp.get_channels()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<ndi.core.Probe at 0x127fb1910>]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "# Finding probes using a query\n",
     "by_name = Q('_metadata.name') == 'intra'\n",
     "by_ref = Q('reference') < 2\n",
     "exp.find_probes(by_name & by_ref)"
@@ -214,20 +217,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adding a document to the database\n",
     "og_doc = Document({'number': 1, 'trait': 'realest'}, 'og', 'rapper')\n",
     "exp.add_document(og_doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adding document dependencies for the document\n",
     "deps = [\n",
     "    Document({'number': 1, 'trait': 'chronic'}, 'dre', 'rapper'),\n",
     "    Document({'number': 1, 'trait': 'goat'}, 'm&m', 'rapper'),\n",
@@ -239,26 +244,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.context.Context object at 0x127fb1df0>\n"
+      "<ndi.context.Context object at 0x12f0bb940>\n"
      ]
     }
    ],
    "source": [
+    "# Accessing the context of one of the dependencies\n",
     "print(deps[2].ctx)\n",
+    "\n",
+    "# Writing into that document dependency's binary fork\n",
     "with deps[2].binary.open_write_stream() as ws:\n",
     "    ws.write(b'Took the G out your waffle, all you got left is your ego.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -272,6 +280,7 @@
     }
    ],
    "source": [
+    "# Reading from the document dependencies binary fork\n",
     "with deps[2].binary.open_read_stream() as rs:\n",
     "    print(rs.read(10))\n",
     "    print(rs.seek(53))\n",
@@ -280,18 +289,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'dre': '3d1b30d851694354b941877c3284f32b',\n",
-       " 'm&m': 'dab10e70531f448b981f321c795257af',\n",
-       " 'gambino': 'c18d874df5a744a2899418f88009ea0c'}"
+       "{'dre': 'f010e4ee6e494ec1bc75b65a061d57a2',\n",
+       " 'm&m': 'c50629a35ea14bdda42917bfe98ea56e',\n",
+       " 'gambino': 'babbbc22084a4b61955c2d936b5a9209'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,13 +311,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['070e75c489914095b0bc69eff057b439']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deps[0].depends_on"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['237a14de71634adf8a73ffa8d8cb29a5']"
+       "{'_metadata': {'name': 'og',\n",
+       "  'type': 'rapper',\n",
+       "  'experiment_id': 'c3afdc7fde204264858102ef73b8c44e',\n",
+       "  'parent_id': '070e75c489914095b0bc69eff057b439',\n",
+       "  'asc_path': ',070e75c489914095b0bc69eff057b439',\n",
+       "  'version_depth': 1,\n",
+       "  'latest_version': True},\n",
+       " '_dependencies': {},\n",
+       " '_depends_on': [],\n",
+       " 'number': 0,\n",
+       " 'trait': 'realest'}"
       ]
      },
      "execution_count": 18,
@@ -317,7 +356,12 @@
     }
    ],
    "source": [
-    "deps[0].depends_on"
+    "# Updating a document and saving the changes\n",
+    "og_doc.data['number'] = 0\n",
+    "og_doc.save_updates()\n",
+    "\n",
+    "# Verifying that the changes were made\n",
+    "exp.ctx.db.find_by_id(og_doc.id).data"
    ]
   },
   {
@@ -330,13 +374,15 @@
       "text/plain": [
        "{'_metadata': {'name': 'og',\n",
        "  'type': 'rapper',\n",
-       "  'experiment_id': 'd3a73558fc9e4b92a2bd5e67ea697aa5',\n",
-       "  'parent_id': '237a14de71634adf8a73ffa8d8cb29a5',\n",
-       "  'asc_path': ',237a14de71634adf8a73ffa8d8cb29a5',\n",
-       "  'version_depth': 1,\n",
-       "  'latest_version': True},\n",
-       " '_dependencies': {},\n",
-       " '_depends_on': [],\n",
+       "  'experiment_id': 'c3afdc7fde204264858102ef73b8c44e',\n",
+       "  'parent_id': '',\n",
+       "  'asc_path': '',\n",
+       "  'version_depth': 0,\n",
+       "  'latest_version': False},\n",
+       " '_dependencies': {'dre': 'f010e4ee6e494ec1bc75b65a061d57a2',\n",
+       "  'm&m': 'c50629a35ea14bdda42917bfe98ea56e',\n",
+       "  'gambino': 'babbbc22084a4b61955c2d936b5a9209'},\n",
+       " '_depends_on': ['c3afdc7fde204264858102ef73b8c44e'],\n",
        " 'number': 0,\n",
        " 'trait': 'realest'}"
       ]
@@ -347,9 +393,9 @@
     }
    ],
    "source": [
-    "og_doc.data['number'] = 0\n",
-    "og_doc.save_updates()\n",
-    "exp.ctx.db.find_by_id(og_doc.id).data"
+    "# Getting a document's version history\n",
+    "v0_og_doc = og_doc.get_history()[0]\n",
+    "v0_og_doc.data"
    ]
   },
   {
@@ -360,45 +406,12 @@
     {
      "data": {
       "text/plain": [
-       "{'_metadata': {'name': 'og',\n",
-       "  'type': 'rapper',\n",
-       "  'experiment_id': 'd3a73558fc9e4b92a2bd5e67ea697aa5',\n",
-       "  'parent_id': '',\n",
-       "  'asc_path': '',\n",
-       "  'version_depth': 0,\n",
-       "  'latest_version': False},\n",
-       " '_dependencies': {'dre': '3d1b30d851694354b941877c3284f32b',\n",
-       "  'm&m': 'dab10e70531f448b981f321c795257af',\n",
-       "  'gambino': 'c18d874df5a744a2899418f88009ea0c'},\n",
-       " '_depends_on': ['d3a73558fc9e4b92a2bd5e67ea697aa5'],\n",
-       " 'number': 0,\n",
-       " 'trait': 'realest'}"
+       "{'dre': 'f010e4ee6e494ec1bc75b65a061d57a2',\n",
+       " 'm&m': 'c50629a35ea14bdda42917bfe98ea56e',\n",
+       " 'gambino': 'babbbc22084a4b61955c2d936b5a9209'}"
       ]
      },
      "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "v0_og_doc = og_doc.get_history()[0]\n",
-    "v0_og_doc.data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dre': '3d1b30d851694354b941877c3284f32b',\n",
-       " 'm&m': 'dab10e70531f448b981f321c795257af',\n",
-       " 'gambino': 'c18d874df5a744a2899418f88009ea0c'}"
-      ]
-     },
-     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,21 +422,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'og': <ndi.document.Document object at 0x12b480d90>}\n",
-      "{'og': <ndi.document.Document object at 0x12b480d90>}\n",
+      "{'og': <ndi.document.Document object at 0x13484b130>}\n",
       "---\n",
-      "['dre_v0', 'm&m_v0', 'gambino_v0', 'og_v0', 'og_v1']\n"
+      "['m&m_v0', 'og_v0', 'gambino_v0', 'dre_v0', 'og_v1']\n"
      ]
     }
    ],
    "source": [
+    "# Converting a document's dependencies, which are stored as ids, into document objects\n",
     "print(exp.get_document_dependencies())\n",
     "print('---')\n",
     "print([\n",
@@ -434,16 +447,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Deleting a document, along with its history\n",
     "og_doc.delete(force=True, remove_history=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -451,13 +465,13 @@
      "output_type": "stream",
      "text": [
       "{}\n",
-      "{}\n",
       "---\n",
       "[]\n"
      ]
     }
    ],
    "source": [
+    "# Showing that document was deleted\n",
     "print(exp.current.get_document_dependencies())\n",
     "print('---')\n",
     "print([\n",
